[package]
name = "game_features"
version = "0.8.1"
authors = ["jojolepro <jojolepromain@gmail.com>"]
description = "Various helpful constructs for game development. See the github repository for detailed instructions."
categories = ["game-engines"]
keywords = ["game", "features", "utils"]
documentation = "https://docs.rs/game_features"
repository = "https://github.com/jojolepro/game_features"
license = "Apache-2.0"
edition = "2018"
exclude = ["doc"]

[dependencies]
partial_function = "0.4.0"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.5.5"
derive-new = "0.5.8"
derive_builder = "0.7.1"
derivative = "2.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
