[package]
name = "game_features"
version = "0.8.2"
authors = ["AnneKitsune <annekitsunefox@gmail.com>"]
description = "Various helpful constructs for game development. See the github repository for detailed instructions."
categories = ["game-engines"]
keywords = ["game", "features", "utils"]
documentation = "https://docs.rs/game_features"
repository = "https://github.com/AnneKitsune/game_features"
license = "AGPL-3.0-or-later"
edition = "2021"
exclude = ["doc"]

[dependencies]
partial_function = "0.5.0"
serde = { version = "1.0", features = ["serde_derive"] }
rand = "0.9.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"

[dev-dependencies]
# WASM_BINDGEN_USE_BROWSER=1 cargo test --target wasm32-unknown-unknown
# currently broken due to rand
wasm-bindgen-test = "0.3.50"
